--- a/genezio.yaml
+++ b/genezio.yaml
@@ -1,8 +1,8 @@
 # Learn more about Genezio YAML at https://genezio.com/docs/project-structure/genezio-configuration-file/
 # The name of the project.
-name: genezio-project
+name: uipath-robot
 # The region where the project is deployed.
-region: eu-central-1
+region: us-east-1
 # The version of the Genezio YAML configuration to parse.
 yamlVersion: 2
 backend:
@@ -21,27 +21,4 @@ backend:
     # List of scripts to run before starting `genezio local`.
     local: npm install
   # The cloud provider where the backend is deployed.
-  cloudProvider: genezio
-# Information about the frontend, including the path, language, and publish directory.
-# It is optional. It can also be an array if there are multiple frontends you want to deploy.
-frontend:
-  # The folder where the frontend scripts will run.
-  path: client
-  # Specifies information about the SDK generation. If not specified, the SDK will not be generated for this frontend.
-  sdk:
-    # The language the SDK will be written in. Usually the same as the frontend language.
-    language: ts
-  # The directory that will be published to the CDN. It is relative to the `path` directory.
-  publish: dist
-  # Scripts are running in the specified `path` directory.
-  scripts:
-    # List of scripts to run before deploying the frontend.
-    deploy:
-      - npm install @genezio-sdk/${{projectName}}@1.0.0-${{stage}}
-      - npm install
-    # List of scripts that build your frontend before deployment. It should populate the specified `publish` directory.
-    build: npm run build
-    # List of scripts to run when starting the local development server.
-    start:
-      - npm install --silent
-      - npm run dev --silent
+  cloudProvider: cluster
