--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,15 @@
     "license": "ISC",
     "dependencies": {
         "@genezio/types": "^1.0.14",
-        "node-fetch": "^3.3.2"
+        "node-fetch": "^3.3.2",
+        "uuid": "^9.0.1"
     },
     "prettier": {
         "tabWidth": 2
     },
     "devDependencies": {
-        "@types/node": "^20.11.15",
+        "@types/node": "^20.12.7",
+        "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "eslint": "^8.55.0"
